instances controller updated, pathing will now accept names instead of ids as params. Added a dynamic link to instance show page

--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -10,7 +10,7 @@ thinking drop-down menu. Possibly also a search bar. -->
     <select name="instances" class="form-control form-control-lg" onchange="location = this.value;">
       <option value="#">Select your beer exchange group</option>
     <% @instances.each do |instance|%>
-        <option value="<%= instance_path(instance)%>"><%= instance.name %></option>
+        <option value="<%= instance_path(instance.name)%>"><%= instance.name %></option>
     <% end %>
     </select>
   </div>
