--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,11 @@
   color: white;
 }
 
+.navbar-nav {
+   flex-direction: row;
+
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
   color: white;
