--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -2,6 +2,12 @@
 thinking drop-down menu. Possibly also a search bar. -->
 
 <div class="container-instance-index">
+  <form action="/instances">
+    <label for="instance">exchange name:</label>
+    <input type="text" id="fname" name="fname"><br><br>
+    <input type="submit" value="Submit">
+  </form>
+
   <div class="instance-index-div col-lg-5">
     <p class="p-normal">
       Are you joining an existing exchange group? Look below to find your friends
