added todo to show page

--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,3 +1,4 @@
+<!-- todo, if no @instance is found show a page saying "we don't have an instance with that name, try again" -->
 <div class="container-default-background">
   <div class="show-card">
     <p class="p-normal">You are currently looking at the <%= @instance.name %> exchange group.
