cleaned up the spelling and grammar after the native English speaker ;p

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
       </div>
       <div class=" feature-box col-lg-4">
         <i class="icon fas fa-users fa-4x circle-icon"></i>
-        <h3 class="feature-text">Be a part of many exchanges at any one time</h3>
+        <h3 class="feature-text">Be a part of many exchanges at once</h3>
       </div>
       <div class=" feature-box col-lg-4">
         <i class="icon fas fa-gift fa-4x circle-icon"></i>
@@ -44,7 +44,7 @@
          <div class="row">
             <div class="col-md-12 text-center">
               <h2 class="section-title ">How it works</h2>
-              <h4 class="section-titlepara">The Beer Exchanges Secret Santa allows you to set up your Gift Exchange quickly and easily.</h4>
+              <h4 class="section-titlepara">The Beer Exchanges Secret Santa allows you to set up your gift exchange quickly and easily.</h4>
             </div>
             <div class="border text-center"></div>
             <div class="column">
@@ -77,7 +77,7 @@
                      <div class="icon-left">
                         <i class="fas fa-beer fa-2x circle-icon-works tick-box"></i>
                      </div>
-                     <p class="p-works">The groups creater will have particpants paired up along with their information via email once everyone is ready.</p>
+                     <p class="p-works">The group's creator will have particpants paired up along with their information via email once everyone is ready.</p>
                   </div>
                 </div>
                 <div class="col-md-4">
