finding an instance by searching now works, styling is needed still

--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -2,11 +2,11 @@
 thinking drop-down menu. Possibly also a search bar. -->
 
 <div class="container-instance-index">
-  <form action="/instances">
+  <form>
     <label for="instance">exchange name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <input type="submit" value="Submit">
+    <input type="text" id="instance"><br><br>
   </form>
+    <input type="submit" value="Submit" id="find-instance">
 
 
   <div class="instance-index-div col-lg-5">
